# rhc

./: Cargo.toml  README.md
benches/: template_base.txt  templating.rs
src/: args.rs  choice.rs  colors.rs  config.rs  environment.rs  files.rs  http.rs  interactive.rs  keyvalue.rs  lib.rs  request_definition.rs  response.rs  templating.rs
test_definitions/bad/: bad1.toml  bad_method.toml  missing_name.toml  no_request.toml
test_definitions/ok/: get.toml  headers.toml  no_metadata.toml  nonexistent.toml  ok1.toml  post.toml  post_form.toml  post_json.toml  post_multipart.toml  post_text.toml  post_url_encoded.toml  query_params.toml  variables.toml
test_definitions/prepare_bad/: bad_header_name.toml  bad_header_value.toml
tests/: integration_test.rs
tests/definitions/: basic_get.toml
