[package]
name = "rustrest"
version = "0.1.0"
authors = ["Kevin Fleming <kvnflm@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
attohttpc = { version = "0.13.0", features = ["json", "form"] }
clap = "2.33.0"
pad = "0.1.6"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
serde_with = { version = "1.4.0", features = ["json"] }
sublime_fuzzy = "0.6.0"
termion = "1.5.5"
toml = "0.5.6"
tui = "0.9.1"
unicode-width = "0.1.7"
walkdir = "2.3.1"

[dev-dependencies]
assert_cmd = "1.0.1"
criterion = "0.3.2"
httptest = "0.13.1"
pretty_env_logger = "0.4.0"
tempfile = "3.1.0"

[[bench]]
name = "templating"
harness = false
