[package]
name = "rhc"
version = "0.1.0"
authors = ["Kevin Fleming <kvnflm@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
attohttpc = { version = "0.13.0", features = ["json", "form", "charsets"] }
atty = "0.2.14"
lazy_static = "1.4.0"
regex = "1.3.7"
scopeguard = "1.1.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
shellexpand = "2.0.0"
spinners = "1.2.0"
structopt = "0.3.14"
sublime_fuzzy = "0.6.0"
syntect = "4.1.1"
termion = "1.5.5"
toml = "0.5.6"
tui = "0.9.1"
unicode-width = "0.1.7"
walkdir = "2.3.1"

[dev-dependencies]
assert_cmd = "1.0.1"
httptest = "0.13.1"
predicates = "1.0.4"
pretty_env_logger = "0.4.0"
tempfile = "3.1.0"

